--- a/package.json
+++ b/package.json
@@ -52,15 +52,13 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
     "path": "latest",
     "prisma": "latest",
-    "react": "^19",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
@@ -68,14 +66,26 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
     "vaul": "^0.9.6",
-    "zod": "latest"
+    "zod": "latest",
+    "formidable": "^3.5.1",
+    "next-auth": "^4.24.5",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-pdf": "^7.0.0",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
