Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -48,15 +48,20 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "formidable": "^3.5.1",
     "fs": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
     "path": "latest",
+    "pdfjs-dist": "^4.8.69",
     "prisma": "latest",
+    "react": "^18",
     "react-day-picker": "8.10.1",
+    "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
@@ -66,11 +71,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "formidable": "^3.5.1",
-    "next-auth": "^4.24.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
